--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
  <head> 
   <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"> 
   <link href="index.css" rel="stylesheet"> 
-  <link href="page.css" rel="stylesheet"> 
 </head> 
 <body>
 <span style="font-family:Noto Serif SC;"><!--字体-->
 <div class="header">
- <div class="gradient-text">
+ <div class="gradient-text-rb">
  <h1>G.X.</h1>
  </div>
  <p><i>一个个人但实用的网站~</i></p>
@@ -24,7 +23,7 @@
   <div class="leftcolumn">
   
    <div class="mainpage-banner">
-<div class="mainpage-banner-header"><div class="gradient-text">G.X.</div></div>
+<div class="mainpage-banner-header"><div class="gradient-text-rb">G.X.</div></div>
 <div class="mainpage-banner-content">
 <p style="font-style:italic;font-size:120%">欢迎!这里是GXawa的个人网站,但他却想要创造出一个实用性更高的网站~</p>
 </div></div>
