--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 </div>
 
 <div class="footer">
-  <h2></h2>
+  <h2><a href="https://icp.gov.moe/?keyword=20241019" target="_blank">萌ICP备20241019号</a></h2>
 </div>
 </span><!--字体-->
 </body>
