--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
  <head> 
   <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"> 
   <link href="index.css" rel="stylesheet"> 
-</head> 
+</head>
 <body>
+ <div class="bg">
 <span style="font-family:Noto Serif SC;"><!--字体-->
 <div class="header">
  <div class="gradient-text-rb">
@@ -45,6 +46,7 @@
   <h2><a href="https://icp.gov.moe/?keyword=20241019" target="_blank">萌ICP备20241019号</a></h2>
 </div>
 </span><!--字体-->
+ </div><div>
 </body>
 </html>
     
