--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <link href="index.css" rel="stylesheet"> 
 </head>
 <body>
- <div class="bg">
 <span style="font-family:Noto Serif SC;"><!--字体-->
 <div class="header">
  <div class="gradient-text-rb">
@@ -46,7 +45,7 @@
   <h2><a href="https://icp.gov.moe/?keyword=20241019" target="_blank">萌ICP备20241019号</a></h2>
 </div>
 </span><!--字体-->
- </div><div>
+</div>
 </body>
 </html>
     
